# novel-lang

./: Cargo.toml  README.md  bacon.toml  package-lock.json
examples/: adventure.html  adventure.nov  example.html  example.nov  mk-encounter.html  mk-encounter.nov  pilot.html  simple.rs  style.css  test v2.nov  test-adventure.nov  test.nov  test.nov.html
examples/inner_voices_pilot/: first-recording.nov  main.rs  pilot-pt.nov  pilot-styled.html  pilot.html  pilot.nov  summaries.txt
src/: exporter.rs  lib.rs  main.rs  parser.rs  player.rs  server.rs  types.rs  vscode-properties-reference.css
