[package]
edition = "2024"
name = "novel-lang"
version = "0.1.0"

[[bin]]
name = "novel"
path = "src/main.rs"

[dependencies]
clap = {version = "4.5.48", features = ["derive"]}
hypertext = "0.12.1"
nom = {version = "8.0.0", optional = true}
tokio = { version = "1.47.1", optional = true, features = ["io-std", "rt"] }
tower-lsp = {version = "0.20.0", optional = true}

[features]
default = ["parser", "server"]
parser = ["dep:nom"]
server = ["dep:tower-lsp", "dep:tokio"]
